# cv_maker

./: .dockerignore  .gitignore  .tool-versions  Dockerfile  README.md  pyproject.toml  requirements.txt
backend/: .dockerignore  .env.example  Dockerfile  main.py  pyproject.toml  requirements.txt
backend/models/: schemas.py
backend/services/: cv_processor.py  job_scraper.py  llm_adapter.py  pdf_generator.py
frontend/: .dockerignore  Dockerfile  config.js  index.html  script.js  styles.css
frontend/js/: app.js
frontend/js/components/: CVAdapter.js  DownloadManager.js  FileHandler.js  ResultsDisplay.js  UIController.js  UrlValidator.js
frontend/js/config/: config.js
frontend/js/services/: ApiService.js
frontend/js/utils/: CacheManager.js  MarkdownConverter.js
frontend/nginx/: default.conf
